# deep_learning

./: .gitignore  README.md  deep_learning.sln
demo/: CMakeLists.txt  Compat.cpp  Compat.h  Data.cpp  Data.h  Detect.cpp  Detect.h  Detect_Caffe.cpp  Detect_Caffe.h  Detect_Frednet.cpp  Detect_Frednet.h  Display.cpp  Display.h  GazeData.cpp  GazeData.h  MessageLoop.cpp  MessageLoop.h  Queue.h  Scenery.cpp  Scenery.h  main.cpp
demo/Camera/: CMakeLists.txt  Camera.cpp  Camera.h  Canon.cpp  Webcam.cpp  Webcam.h
demo/Frednet/: CMakeLists.txt  ReLu_layer.h  base_layer.h  caffe_parameter_parser.hpp  calc_shape.cpp  calc_shape.h  concat_layer.h  conv_layer.h  dynamic_arrays.cpp  dynamic_arrays.h  fc_layer.h  flat_layer.h  flatten_layer.h  image_layer.h  mvn_layer.h  pooling_layer.h
demo/Render/: CMakeLists.txt  Matrix.h  Ray.h  Render.h  RenderBox.cpp  RenderBox.h  RenderObject.cpp  RenderObject.h  RenderPlane.cpp  RenderPlane.h  RenderPoint.h  Transformation.h  Vector.h
demo_linux/: Compat.cpp  Compat.h  Data.cpp  Data.h  demo_linux.vcxproj  demo_linux.vcxproj.filters
demo_windows/: demo_windows.vcxproj  demo_windows.vcxproj.filters  packages.config
gaze_data/: ArrowedLine.cpp  BaseBBox.h  BaseHighlighter.cpp  BaseHighlighter.h  Config.h  GazeCapture.cpp  GazeCapture.h  GazeData.cpp  GazeData.h  Image.cpp  Image.h  Landmark.cpp  Landmark.h  LandmarkCandidate.cpp  Line.cpp  Line.h  Matrix.h  Point.cpp  Ray.cpp  Ray.h  Render.cpp  Render.h  RenderHelper.cpp  RenderHelper.h  RotationMatrix.cpp  RotationMatrix.h  Scenery.cpp  Scenery.h  Vector.h  config.cfg  config_old.cfg  gaze_data.rc  gaze_data.txt  gaze_data.vcxproj  gaze_data.vcxproj.filters  main.cpp  rainer.txt  resource.h
gaze_data/doxygen/: Doxyfile  generate_documentation.bat
gaze_data/src/: ArrowedLine.h  BBox.cpp  BBox.h  BaseBBox.cpp  BaseBBox.h  BaseHighlighter.cpp  BaseHighlighter.h  Camera.cpp  Camera.h  Canon.cpp  Canon.h  Config.cpp  Config.h  DataSet.cpp  DataSet.h  FileFormat.cpp  FileFormat.h  FrameProcessor.cpp  FrameProcessor.h  Gaze.h  GazeCapture.cpp  GazeCapture.h  GazeData.cpp  GazeData.h  GazeResult.cpp  GazeResult.h  Image.cpp  Image.h  Landmark.cpp  Line.cpp  (+19 more)
generate/: Canon.cpp  Canon.h  Columbia.cpp  Columbia.h  Custom.cpp  Custom.h  Data.cpp  Data.h  Detect.cpp  Detect.h  Display.cpp  Display.h  GazeData.cpp  GazeData.h  Queue.cpp  Queue.h  Scenery.cpp  Scenery.h  doxygen.cfg  doxygen_run.bat  generate.rc  generate.vcxproj  generate.vcxproj.filters  main.cpp  packages.config  resource.h  targetver.h
(+95 files in other folders)
